# sim

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
bibliography/: index.md
des/: ask_for_work.py  ask_for_work.txt  index.md  introduce_structure.py  introduce_structure_df.sh  introduce_structure_df.txt  introduce_structure_json.json  introduce_structure_json.sh  random_interaction.py  random_interaction.txt  simple_interaction.py  simple_interaction.txt  simple_interaction_marimo.py  simple_interaction_marimo_named_cell_with_colors.py  simple_interaction_marimo_named_cells.py  uniform_interaction.py  uniform_interaction.txt
docs/: index.html
docs/bibliography/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/des/: index.html
docs/features/: index.html
docs/feedback/: index.html
docs/finale/: index.html
docs/generators/: index.html
docs/glossary/: index.html
docs/insight/: index.html
docs/interrupts/: index.html
extras/: links.md
features/: Makefile  analyze_completed_triaged.py  analyze_queue_length.py  index.md  strict_priorities.py  weighted_priorities.py  weighted_triage.py
feedback/: Makefile  analyze_big_jobs_first.py  analyze_scenario_testing.py  big_jobs_first.py  class_testing.py  index.md  scenario_testing.py  simple_testing.py
generators/: Makefile  alternate.py  char_from_string.py  char_with_loop.py  combinations.py  infinite.py  send.py  send_buggy.out  send_buggy.py
glossary/: index.md
insight/: actor.py  coder.py  index.md  interrupter.py  jobs.py  log.py  manager.py  monitor.py  params.py  recorder.py  simulation.py  tester.py  util.py
interrupts/: Makefile  analyze_interrupt_corrected.py  analyze_self_interrupt.py  decomp.py  discard.py  index.md  interrupt_resume_corrected.py  interrupts.py
intro/: Makefile  alternate.py  char_from_string.out  char_from_string.py  char_with_loop.out  char_with_loop.py  combinations.out  combinations.py  index.md  infinite.out  infinite.py  send.out  send.py  send_buggy.out  send_buggy.py
metrics/: Makefile  four_metrics.py  index.md  job_arrival.py  measure_delay.py  measure_delay.txt
multiple/: m1_d1_fixed.out  m1_d1_fixed.py
params/: developer_pool_task_process.json  developer_pool_variable_speed.json  independent_fixed_work.json  independent_fixed_work_self_recording.json  summary_statistics.json  summary_statistics_long.json  task_queue_developer_process.json  two_stage_no_coordination.json  two_stage_with_coordination.json  two_stage_with_rework.json
scenarios/: cost_of_sharing.py  index.md  job_priority.py  job_priority.txt  rework_any.py  rework_same.py  smoothing.py
sim/: __init__.py  developer_pool_task_process.py  developer_pool_variable_speed.py  independent_fixed_work.py  independent_fixed_work_self_recording.py  independent_random_work.py  self_recording.py  shared_queue_worker_centric.py  sim.py  summary_statistics.py  summary_statistics_plot.py  task_queue_developer_process.py  task_queue_worker_process.py  two_stage_logging.py  two_stage_no_coordination.py  two_stage_refactored.py  two_stage_with_coordination.py  two_stage_with_rework.py  util.py  worker_pool_task_process.py  worker_pool_variable_speed.py
simple/: Makefile  analyze_job_object.py  context_manager_log.py  fixed_work_and_break.out  fixed_work_and_break.py  index.md  job_object.py  manager_developer_queue.py  monitor_uniform_work_and_break.out  monitor_uniform_work_and_break.py  plot_log_normal.py  sampling_log.py  simulate_with_objects.out  simulate_with_objects.py  uniform_work_and_break.out  uniform_work_and_break.py  visualize_sampling_log.py  visualize_start_stop_json.py
simpy-matplotlib-animation/: launcher.sh  queue_evolution_chart.py  simple_interaction_manager_coder.py
static/: page.css
teams/: Makefile  analyze_multiple_programmers.py  analyze_queue_lengths.py  index.md  plot_exponential.py  plot_log_normal.py  queue_lengths.py
templates/: page.html
utilities/: __init__.py
(+7 files in other folders)
