[project]
name = "sim"
version = "0.1.0"
description = "An exploration of discrete event simulation"
authors = [{name = "Greg Wilson", email = "gvwilson@third-bit.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "kaleido>=1.2.0",
    "plotly[express]>=6.5.0",
    "polars>=1.35.2",
    "simpy>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://gvwilson.github.io/sim"
Repository = "https://github.com/gvwilson/sim"
