[project]
name = "sim"
version = "0.1.0"
description = "Discrete event simulation of software development"
authors = [{name = "Greg Wilson", email = "gvwilson@third-bit.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "kaleido>=1.2.0",
    "plotly[express]>=6.5.0",
    "polars>=1.36.1",
    "prettytable>=3.17.0",
    "scipy>=1.16.3",
    "simpy>=4.0.1"
]

[project.optional-dependencies]
dev = [
    "mccole>=1.3.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://gvwilson.github.io/sim"
Repository = "https://github.com/gvwilson/sim"

[tool.mccole]
skips = [
    "*~",
    "*.out",
    "*.py",
    "*.sh",
    "Makefile",
    "extras/**",
    "unused/**",
    "uv.lock"
]
