[project]
name = "sim"
version = "0.3.0"
description = "Discrete event simulation of software development processes"
authors = [{name = "Greg Wilson", email = "gvwilson@third-bit.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dataclasses-json>=0.6.7",
    "graphviz>=0.21",
    "kaleido>=1.2.0",
    "plotly[express]>=6.5.0",
    "polars>=1.36.1",
    "prettytable>=3.17.0",
    "scipy>=1.16.3",
    "simpy>=4.0.1",
    "taskipy>=1.14.1"
]

[project.optional-dependencies]
dev = [
    "genson>=1.3.0",
    "mccole>=1.4.3",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://gvwilson.github.io/sim"
Repository = "https://github.com/gvwilson/sim"

[tool.mccole]
skips = [
    "*~",
    "*.egg-info/**",
    "*.py",
    "*.sh",
    "*.txt",
    "Makefile",
    "extras/**",
    "unused/**",
    "utilities/**",
    "uv.lock"
]

[tool.taskipy.tasks]
build = {help = "build HTML", cmd = "mccole build --src . --dst docs && touch docs/.nojekyll"}
check = {help = "check HTML", cmd = "mccole check --src . --dst docs"}
clean = {help = "clean up", cmd = """
find . -path './.venv' -prune -o -type d -name '__pycache__' -exec rm -rf {} + &&
find . -path './.venv' -prune -o -type d -name '.ruff_cache' -exec rm -rf {} + &&
find . -path './.venv' -prune -o -type f -name '*~' -exec rm {} +
"""}
examples = {help = "re-create examples", cmd = """
for mf in */Makefile
do
    make -C $(dirname $mf) all
done
"""}
fix = {help = "fix code issues", cmd = "ruff check --fix ."}
format = {help = "format code", cmd = "ruff format ."}
lint = {help = "check code", cmd = "ruff check ."}
serve = {help = "serve HTML", cmd = "python -m http.server -d docs"}
